<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/marginSmall"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtFirstNumberHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSecondNumberHint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddititonText" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>